# gcs-user-interface

./: .env  .eslintrc.cjs  .gitignore  .prettierrc  LICENSE  README.md  bun.lockb  camServer.py  components.json  compose.yml  docker-compose.yml  index.html  mockWebsock.cjs  mockWebsock.js  mockWebsock2.cjs  package-lock.json  package.json  pnpm-lock.yaml  start.sh  styleguide.config.cjs  styleguide.config.js  tailwind.config.js  tileServer.py  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1748063586111-b005f10275ab9.mjs  webSocket.cts
python_scripts/: fpv.py  index.html
scripts/: target-triple.js
src/: App.vue  client.js  main.css  main.ts  styles.css  test-websocket-server.cjs  testDisplayComponents.vue  testMapScreen.vue  testWSConnection3.ts  webSocket.cjs  webSocket.cts  webSocket.ts
src-tauri/: .gitignore  Cargo.toml  opencv.py  tauri.conf.json  tauri.conf.json.backup
src-tauri/capabilities/: default.json
src-tauri/src/: init_db.rs  main.rs
src-tauri/src/commands/: commands.rs  mod.rs  telem.rs
src-tauri/src/missions/: api.rs  mod.rs  sql.rs  types.rs
src-tauri/src/rabbitmq/: commands.rs  mod.rs  telem.rs
src-tauri/src/telemetry/: api.rs  geos.rs  mod.rs  publisher.rs  rabbitmq.rs  sql.rs  test_rabbitmq.rs  types.rs
src/Functions/: geofence.ts  types.ts  webSocket.ts
src/components/: Battery.vue  Camera.vue  CameraCarousel.vue  CameraFeed.vue  Cameras.vue  ErrorToast.vue  Greet.vue  HeaderNavbar.vue  HomeSidebar.vue  IndicatorComponent.vue  Map.vue  MapSidebar.vue  Navbar.vue  RightBar.vue  ThemeToggle.vue  VehicleStatusComponent.vue  WSLog.vue  mapold.vue  mockWS.vue
src/components/FlightComponents/: Airspeed.vue  Altimeter.vue  Altitude.vue  Heading.vue
src/lib/: MapStore.ts  MapStore.types.ts  MissionStore.ts  MissionStore.types.ts  StoresSync.ts  TelemetryStore.ts  TelemetryStore.types.ts  bindings.ts  commands_bindings.ts
src/router/: index.js  index.ts
src/types/: mission-info-provider.ts  mission-info.ts  search-coords-provider.ts  target-coords.provider.ts  vue-leaflet-rotate-marker.d.ts
src/views/: Cam1Focus.vue  Cam2Focus.vue  CamFocus.vue  HomeScreen.vue  MissionInitialization.vue  MissionStatus.vue  MissionView.vue  StageView.vue  StaticScreen.vue  VehicleView.vue  fourCam.vue  mockWS.vue  test.vue  testMapScreen.vue
(+83 files in other folders)
