[package]
name = "Interface"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
specta = {version = "=2.0.0-rc.22", features= ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
taurpc = "0.4.1"
serde_json = "1.0"
tauri-plugin-shell = "2"
rand = "0.9"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
